# cleaning_detection_prototype

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cleaning_detection/: __init__.py  analytics.py  events.py  geometry.py  logging_setup.py
tests/: test_analytics.py  test_events.py  test_geometry.py  test_logging_setup.py
